--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,7 +7,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Libre Franklin", sans-serif;
-	background: #F2F2F2;
+	background: white;
 }
 
 h1,
